# notes

./: README.md  lec01a.txt  lec01b.txt  lec01c.md  lec02a.rkt  lec02b.rkt  lec02c.rkt  lec02d.md  lec05-avl.rkt  lec05b.rkt  lec05c.txt  lec06b.txt  lec07a.txt  lec08c.rkt  lec09a.rkt  lec09b.rkt  lec09c.rkt  lec10a.rkt  lec10b.rkt  lec10c.rkt  lec10x.rkt  lec11a.txt  lec11b.txt  schedule.md  schedule.txt  setup1.md  setup2.md
binomial-heap-scratch/: CMakeLists.txt  bh.cpp  bh.h  test.cpp
c++-template/: CMakeLists.txt
lec-dlldeque/src/: Deque.h  Sentinel.h
lec-dlldeque/test/: deque_test.cpp
lec-hashing/: README.md
lec-hashing/test-done/: Open_hash_test_done.cpp
lec12/: CMakeLists.txt  README.md
lec12/.ipd/cmake/: CMakeLists.txt
lec12/test/: functions.cpp  posn.cpp  vectors.cpp
lec13/: CMakeLists.txt  README.md
lec13/src/: Union_find.h  WU_graph.cpp  WU_graph.h
lec13/test/: acct_test.cpp  graph_test.cpp  queue_test.cpp  stack_test.cpp  uf_test.cpp
lec14/: CMakeLists.txt  README.md
lec14/src/: Dist_heap_map.cpp  Dist_heap_map.h  Distance_heap.cpp  Distance_heap.h  Heap.h  WU_graph.cpp  WU_graph.h  posn.h
lec14/src/connect4/: connect4.cpp  controller.cpp  controller.h  model.cpp  model.h
lec14/src/continuous_motion/: mvc.cpp  mvc.h
lec14/src/discrete_motion/: main.cpp  mvc.cpp  mvc.h
lec14/test/: continuous_motion_test.cpp  discrete_motion_test.cpp  dist_heap_map_test.cpp  dist_heap_test.cpp  graph_test.cpp  heap_test.cpp  posn_test.cpp
lec15/: CMakeLists.txt  README.md
lec15/src/: Cons_list.cpp  Cons_list.h  fish.cpp
lec15/src/connect4/: view.cpp  view.h
lec15/test/: Vec_hash_test.cpp  connect4_test.cpp  list_test.cpp
lec15/test-done/: Vec_hash_test_done.cpp
lec16/: CMakeLists.txt  README.md
lec16/src/: Bst.h  RP_queue.h  SP_queue.h  UP_queue.h
lec16/test/: bf_test.cpp  bst_test.cpp  hash_test.cpp  list_test.cpp  queue_test.cpp  vec_test.cpp
lec17/: CMakeLists.txt  README.md
lec17/.ipd/cmake/: CMakeLists.txt
lec17/src/: Bloom_filter.cpp  Bloom_filter.h  Bst.h  Chain_hash_table.h  Flat_bloom.h  Hash_table_base.h  Open_hash_table.h  Sbox_hash.cpp  Sbox_hash.h  Tagged_optional.h  Various_hashes.h  avalanche.cpp  avalanche.rkt  collisions.cpp  common.h  hamlet.h  hash_trial.cpp  hash_trial.h
lec17/test/: Chain_hash_table_test.cpp  Open_hash_table_test.cpp  Tagged_optional_test.cpp  bf_test.cpp  bst_test.cpp  flat_bf_test.cpp  hash_test.cpp  heap_test.cpp
lec18/: CMakeLists.txt
lec18-scratch/: bh.cpp  bh.h  fig.rkt  test.cpp  unique-ptr-cheatsheet.txt
lec18/src/: Binomial_heap.h
lec18/test/: heap_test_leaky.cpp
lec20/: CMakeLists.txt
lec20/src/: ast.h  env.h  eval.cpp  itemization.rkt  lexer.cpp  lexer.h  parser.cpp  parser.h  primops.cpp  reader.cpp  simple_interp.cpp  symbol.cpp  symbol.h  value.cpp  value.h
lec20/src/islpp/: lexer.h  parser.cpp  primops.h  reader.cpp  reader.h  struct.h  symbol.cpp  value.h
lec20/test/: ast_test.cpp  env_test.cpp  eval_test.cpp  lexer_test.cpp  parser_test.cpp  primops_test.cpp  reader_test.cpp  symbol_test.cpp  test_common.h  value_test.cpp
